[package]
name = "tokio-udp-multicast-chat"
version = "0.2.0"
authors = ["Henning Ottesen <henning@live.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
socket2 = "0.4"
clap = "2"